--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.index.js filter=lfs diff=lfs merge=lfs -text
 .*src filter=lfs diff=lfs merge=lfs -text
 *.src filter=lfs diff=lfs merge=lfs -text
+*.index.html filter=lfs diff=lfs merge=lfs -text
